		separate parts; NetBSD/sgimips' Xorg now looks reasonable.
20181107	Progress on PS/2 mouse emulation; NetBSD accepts it as "pms0
		at macekbc0" in the SGI O2 emulation mode. (No actual host
		mouse input yet though.)
20181108	Implementing host X11 mouse input for the pckbc device.
20181112	More work on the O2 rendering engine Raster Ops. Moving windows
		within NetBSD's X11 now looks as it should.
20181115	Changing the PCI product ID for the AIC7880 SCSI controller in
		the SGI O2 emulation mode to match my real O2 (0x9004, 0x8078).
20181120	Continuing on SGI O2 graphics: "overlays" (seem to always be
		8 bits deep?).
20181121	Getting rid of a hack in the O2 rendering code for "stipple
		patterns", by looking at the "stipple mode" register.
20181122	Fixing an old very annoying bug where floating point number
		0x0 was interpreted as 2.22507e-308 rather than 0.0. Thanks to
		Maya Rashish (coypu@SDF.ORG) for reporting the bug.
20181203	Beginning on test/floatingpoint infrastructure. Fixing some
		more floating point bugs.

==============  RELEASE 0.6.1  ==============

20181217	Implementing the ARM uxtb instruction.
		Implementing a simple Android boot.img file loader, and two
		dummy Android ARM machines ("Sony Xperia Mini" and "Finow X5
		Air").
		Treating ARM dsb/dmb/isb instructions as NOPs for now.
20190101	Implementing the ARM v7 movt and movw instructions.
20190103	Implementing the ARM sxth, uxth, bfi, and ubfx instructions.
20190110	Adding disassembly (but not execution yet) of ARM uxtab, uxtah,
		ldrex, and strex instructions.
20190112	Making sure that when writing to mirrored RAM, any dyntrans
		translations made in either the mirror or mirrored ranges are
		invalidated.
20190122	Beginning on a hack to allow emulated SGI O2 machines have more
		than 256 MB of RAM. Works with OpenBSD/sgi so far.
20190206	Implementing the ARM ldrex/strex (load-linked / store-
		conditional) instructions, and mls (multiply-and-subtract).